// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RefineInventory stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="border-b last:border-b-0 !border-b"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="open"
      data-testid="sf-store-inventory-filter"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-_r_1_"
          aria-expanded="true"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="open"
          id="radix-_r_0_"
          type="button"
        >
          Shop by Availability
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-_r_0_"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="open"
        id="radix-_r_1_"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        <div
          class="pt-0 pb-4"
        >
          <div
            class="flex items-start space-x-2 p-2 rounded-md hover:bg-muted/30"
          >
            <button
              aria-checked="false"
              aria-label="Filter Products by Store Availability at Select Store"
              class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
              data-slot="checkbox"
              data-state="unchecked"
              data-testid="sf-store-inventory-filter-checkbox"
              id="inventory-filter"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="text-sm font-medium leading-none cursor-pointer"
              for="inventory-filter"
            >
              In stock at  
              <span
                aria-label="Select Store"
                class="underline cursor-pointer hover:opacity-70"
                role="button"
                tabindex="0"
              >
                Select Store
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="border-b last:border-b-0 !border-b"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="open"
      data-testid="sf-store-inventory-filter"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-_r_9_"
          aria-expanded="true"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="open"
          id="radix-_r_8_"
          type="button"
        >
          Shop by Availability
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-_r_8_"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="open"
        id="radix-_r_9_"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        <div
          class="pt-0 pb-4"
        >
          <div
            class="flex items-start space-x-2 p-2 rounded-md hover:bg-muted/30"
          >
            <button
              aria-checked="true"
              aria-label="Filter Products by Store Availability at Downtown Store"
              class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
              data-slot="checkbox"
              data-state="checked"
              data-testid="sf-store-inventory-filter-checkbox"
              id="inventory-filter"
              role="checkbox"
              type="button"
              value="on"
            >
              <span
                class="grid place-content-center text-current transition-none"
                data-slot="checkbox-indicator"
                data-state="checked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check size-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </button>
            <label
              class="text-sm font-medium leading-none cursor-pointer"
              for="inventory-filter"
            >
              In stock at  
              <span
                aria-label="Change Store"
                class="underline cursor-pointer hover:opacity-70"
                role="button"
                tabindex="0"
              >
                Downtown Store
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > FilterChecked story renders and matches snapshot 1`] = `
<div>
  <div>
    <div
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0 !border-b"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="open"
        data-testid="sf-store-inventory-filter"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="open"
        >
          <button
            aria-controls="radix-_r_5_"
            aria-expanded="true"
            class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="open"
            id="radix-_r_4_"
            type="button"
          >
            Shop by Availability
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_4_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="open"
          id="radix-_r_5_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="pt-0 pb-4"
          >
            <div
              class="flex items-start space-x-2 p-2 rounded-md hover:bg-muted/30"
            >
              <button
                aria-checked="true"
                aria-label="Filter Products by Store Availability at Downtown Store"
                class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
                data-slot="checkbox"
                data-state="checked"
                data-testid="sf-store-inventory-filter-checkbox"
                id="inventory-filter"
                role="checkbox"
                type="button"
                value="on"
              >
                <span
                  class="grid place-content-center text-current transition-none"
                  data-slot="checkbox-indicator"
                  data-state="checked"
                  style="pointer-events: none;"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-check size-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </span>
              </button>
              <label
                class="text-sm font-medium leading-none cursor-pointer"
                for="inventory-filter"
              >
                In stock at  
                <span
                  aria-label="Change Store"
                  class="underline cursor-pointer hover:opacity-70"
                  role="button"
                  tabindex="0"
                >
                  Downtown Store
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="border-b last:border-b-0 !border-b"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="open"
      data-testid="sf-store-inventory-filter"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-_r_7_"
          aria-expanded="true"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="open"
          id="radix-_r_6_"
          type="button"
        >
          Shop by Availability
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-_r_6_"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="open"
        id="radix-_r_7_"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        <div
          class="pt-0 pb-4"
        >
          <div
            class="flex items-start space-x-2 p-2 rounded-md hover:bg-muted/30"
          >
            <button
              aria-checked="false"
              aria-label="Filter Products by Store Availability at Downtown Store"
              class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
              data-slot="checkbox"
              data-state="unchecked"
              data-testid="sf-store-inventory-filter-checkbox"
              id="inventory-filter"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="text-sm font-medium leading-none cursor-pointer"
              for="inventory-filter"
            >
              In stock at  
              <span
                aria-label="Change Store"
                class="underline cursor-pointer hover:opacity-70"
                role="button"
                tabindex="0"
              >
                Downtown Store
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RefineInventory stories snapshot > WithStoreSelected story renders and matches snapshot 1`] = `
<div>
  <div
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="border-b last:border-b-0 !border-b"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="open"
      data-testid="sf-store-inventory-filter"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-_r_3_"
          aria-expanded="true"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="open"
          id="radix-_r_2_"
          type="button"
        >
          Shop by Availability
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-_r_2_"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="open"
        id="radix-_r_3_"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        <div
          class="pt-0 pb-4"
        >
          <div
            class="flex items-start space-x-2 p-2 rounded-md hover:bg-muted/30"
          >
            <button
              aria-checked="false"
              aria-label="Filter Products by Store Availability at Select Store"
              class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4"
              data-slot="checkbox"
              data-state="unchecked"
              data-testid="sf-store-inventory-filter-checkbox"
              id="inventory-filter"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="text-sm font-medium leading-none cursor-pointer"
              for="inventory-filter"
            >
              In stock at  
              <span
                aria-label="Select Store"
                class="underline cursor-pointer hover:opacity-70"
                role="button"
                tabindex="0"
              >
                Select Store
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
